<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="850dp"
    android:background="@color/russian_green"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="850dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/rectangleLayout"
                android:layout_width="match_parent"
                android:layout_height="275dp"
                android:background="@drawable/rectangle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_genderDataMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="@+id/iv_gender"
                    app:layout_constraintStart_toStartOf="@+id/iv_gender"
                    app:layout_constraintTop_toBottomOf="@+id/iv_gender"
                    app:srcCompat="@drawable/male_mini" />

                <ImageView
                    android:id="@+id/iv_genderDataFemale"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/iv_gender"
                    app:layout_constraintStart_toStartOf="@+id/iv_gender"
                    app:layout_constraintTop_toBottomOf="@+id/iv_gender"
                    app:srcCompat="@drawable/female_mini" />

                <ImageView
                    android:id="@+id/iv_logoFlat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/logo_flat" />

                <TextView
                    android:id="@+id/tv_predictTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/prediction_title"
                    android:textColor="@color/russian_green"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_logoFlat" />

                <ImageView
                    android:id="@+id/iv_rhombus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_predictTitle"
                    app:srcCompat="@drawable/rhombus_split" />

                <ImageView
                    android:id="@+id/iv_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_predictTitle"
                    app:srcCompat="@drawable/gender" />

                <ImageView
                    android:id="@+id/iv_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_predictTitle"
                    app:srcCompat="@drawable/age" />

                <Button
                    android:id="@+id/btn_done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/done_predict"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_rhombus" />

                <TextView
                    android:id="@+id/tv_user_age"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/user_age"
                    android:textAlignment="center"
                    android:textSize="48sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/iv_age"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/iv_age"
                    app:layout_constraintTop_toBottomOf="@+id/iv_age"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/btn_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Info"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_done" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_predictDesc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="55dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/predict_desc"
                android:textAlignment="center"
                android:textColor="@color/baby_powder"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rectangleLayout" />

            <ImageView
                android:id="@+id/iv_abdomenData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_chestData"
                app:srcCompat="@drawable/abdomen_data" />

            <ImageView
                android:id="@+id/iv_predictBorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="76dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_predictDesc"
                app:srcCompat="@drawable/predict_border" />

            <TextView
                android:id="@+id/tv_ResultPredict"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="76dp"
                android:fontFamily="@font/poppins_bold"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_predictBorder"
                app:layout_constraintEnd_toEndOf="@+id/iv_predictBorder"
                app:layout_constraintHorizontal_bias="0.662"
                app:layout_constraintStart_toStartOf="@+id/iv_predictBorder"
                app:layout_constraintTop_toBottomOf="@+id/tv_predictDesc"
                app:layout_constraintVertical_bias="0.0"
                tools:text="@string/result_predict" />

            <ImageView
                android:id="@+id/iv_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_predictBorder"
                app:srcCompat="@drawable/line" />

            <ImageView
                android:id="@+id/iv_heightData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_line"
                app:srcCompat="@drawable/height_data" />

            <ImageView
                android:id="@+id/iv_weitghtData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_heightData"
                app:srcCompat="@drawable/weight_data" />

            <ImageView
                android:id="@+id/iv_chestData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_weitghtData"
                app:srcCompat="@drawable/chest_data" />

            <ImageView
                android:id="@+id/iv_hipData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_abdomenData"
                app:srcCompat="@drawable/hip_data" />

            <ImageView
                android:id="@+id/iv_thighData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_hipData"
                app:srcCompat="@drawable/thigh_data" />

            <ImageView
                android:id="@+id/iv_bicepsData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_thighData"
                app:srcCompat="@drawable/biceps_data" />

            <TextView
                android:id="@+id/tv_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/poppins_medium"
                android:paddingTop="2dp"
                android:text="TextView"
                android:textColor="@color/baby_powder"
                app:layout_constraintBottom_toBottomOf="@+id/iv_heightData"
                app:layout_constraintEnd_toEndOf="@+id/iv_heightData"
                app:layout_constraintTop_toTopOf="@+id/iv_heightData" />

            <TextView
                android:id="@+id/tv_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/poppins_medium"
                android:paddingTop="2dp"
                android:text="TextView"
                android:textColor="@color/baby_powder"
                app:layout_constraintBottom_toBottomOf="@+id/iv_weitghtData"
                app:layout_constraintEnd_toEndOf="@+id/iv_weitghtData"
                app:layout_constraintTop_toTopOf="@+id/iv_weitghtData" />

            <TextView
                android:id="@+id/tv_chest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/poppins_medium"
                android:paddingTop="2dp"
                android:text="TextView"
                android:textColor="@color/baby_powder"
                app:layout_constraintBottom_toBottomOf="@+id/iv_chestData"
                app:layout_constraintEnd_toEndOf="@+id/iv_chestData"
                app:layout_constraintTop_toTopOf="@+id/iv_chestData" />

            <TextView
                android:id="@+id/tv_abdomen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/poppins_medium"
                android:text="TextView"
                android:textColor="@color/baby_powder"
                app:layout_constraintBottom_toBottomOf="@+id/iv_abdomenData"
                app:layout_constraintEnd_toEndOf="@+id/iv_abdomenData"
                app:layout_constraintTop_toTopOf="@+id/iv_abdomenData" />

            <TextView
                android:id="@+id/tv_hip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/poppins_medium"
                android:text="TextView"
                android:textColor="@color/baby_powder"
                app:layout_constraintBottom_toBottomOf="@+id/iv_hipData"
                app:layout_constraintEnd_toEndOf="@+id/iv_hipData"
                app:layout_constraintTop_toTopOf="@+id/iv_hipData" />

            <TextView
                android:id="@+id/tv_thigh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/poppins_medium"
                android:text="TextView"
                android:textColor="@color/baby_powder"
                app:layout_constraintBottom_toBottomOf="@+id/iv_thighData"
                app:layout_constraintEnd_toEndOf="@+id/iv_thighData"
                app:layout_constraintTop_toTopOf="@+id/iv_thighData" />

            <TextView
                android:id="@+id/tv_biceps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/poppins_medium"
                android:text="TextView"
                android:textColor="@color/baby_powder"
                app:layout_constraintBottom_toBottomOf="@+id/iv_bicepsData"
                app:layout_constraintEnd_toEndOf="@+id/iv_bicepsData"
                app:layout_constraintTop_toTopOf="@+id/iv_bicepsData" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/iv_predictBorder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/iv_predictBorder"
                app:layout_constraintVertical_bias="0.467"
                tools:visibility="visible" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </RelativeLayout>

</ScrollView>
